--- a/src/app/core/components/product-detail-text/product-detail-text.component.scss
+++ b/src/app/core/components/product-detail-text/product-detail-text.component.scss
@@ -45,6 +45,29 @@
   }
 }
 
+.shoe-heels {
+  button.heel-number {
+    margin-right: 10px;
+    padding: 4px 8px;
+    width: 60px;
+    border: 1px solid #000000;
+    height: 26px;
+    font-size: 12px;
+    line-height: 12px;
+    background: transparent;
+    outline: none;
+
+    &-selected {
+      background: lightgray;
+    }
+
+    &-disabled{
+      opacity: 0.7;
+      cursor: not-allowed;
+    }
+  }
+}
+
 .add-to-cart-button {
   display: inline;
   cursor: pointer;
