--- a/src/app/modules/cart/pages/cart.component.html
+++ b/src/app/modules/cart/pages/cart.component.html
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="d-flex col-lg-8 flex-grow-1 justify-content-end m-0 p-0">
-      <button (click)="deleteLocalStorage()">Delete all</button>
+      <button class="cart-delete-all" (click)="deleteLocalStorage()">Delete all</button>
     </div>
   </div>
 
