--- a/src/app/modules/cart/pages/cart.component.scss
+++ b/src/app/modules/cart/pages/cart.component.scss
@@ -33,6 +33,22 @@
   }
 }
 
+.cart-delete-all {
+  border: none;
+  background-color: rgba(0,0,0,0.8);
+  color: white;
+  width: 130px;
+  height: 40px;
+  font-size: 14px;
+  transition: 0.3s;
+
+  &:hover {
+    width: 150px;
+    transition: 0.3s;
+    background-color: rgba(0,0,0,1);
+  }
+}
+
 @media screen and (min-width: 769px) {
   .shopping-cart-item {
     .col-lg-7 {
