--- a/src/app/core/components/custom-modal/custom-modal.component.scss
+++ b/src/app/core/components/custom-modal/custom-modal.component.scss
@@ -1,5 +1,106 @@
-.modal-body{
-  form{
+/*.modal {
+  border-radius: 10px;
+  overflow: hidden;
+
+  .modal-body {
+    form {
+      width: 100%;
+    }
+  }
+
+  .modal-header {
+    overflow: hidden;
+    //background: transparent;
+  }
+
+  .modal-footer {
+    //background: transparent;
+    overflow: hidden;
+
+    button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex: 1;
+      margin: 0;
+      padding: 0;
+      border-radius: 0 !important;
+      border: none;
+      height: 40px;
+      text-align: center;
+      transition: 0.5s;
+
+      &:hover {
+        font-weight: bold;
+        transition: 0.5s;
+      }
+
+      &.close-button-modal {
+        //background: #a8a8a8;
+        color: black;
+      }
+    }
+  }
+
+}*/
+
+.modal-body {
+  form {
     width: 100%;
+  }
+}
+
+.modal-header {
+  height: 40px;
+  overflow: hidden;
+  justify-content: center;
+  align-items: center;
+  //background: transparent;
+  .modal-title{
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+  }
+}
+
+.modal-footer {
+  //background: transparent;
+  overflow: hidden;
+
+  button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+    margin: 0;
+    padding: 0;
+    border-radius: 0 !important;
+    border: none;
+    height: 40px;
+    text-align: center;
+    transition: 0.5s;
+
+    &:hover {
+      font-weight: bold;
+      transition: 0.5s;
+    }
+
+    &.close-button-modal {
+      background: rgba(96,96,96,0.3);
+      color: white;
+      &:hover{
+        background: rgba(96,96,96,0.5);
+        color: white;
+      }
+    }
+
+    &.save-button-modal {
+      background: rgba(96,96,96,0.7);
+      color: white;
+      &:hover{
+        background: rgba(96,96,96,1);
+        color: white;
+      }
+    }
   }
 }
