--- a/src/app/modules/cart/pages/cart.component.html
+++ b/src/app/modules/cart/pages/cart.component.html
@@ -1,6 +1,9 @@
 <div class="container-fluid">
   <div class="container text-center">
-    <h2>Shopping bag</h2>
+    <h2 *ngIf="shoppingItems && shoppingItems.length > 0 ;else prazna">Shopping cart</h2>
+    <ng-template #prazna>
+      <h2>Your shopping cart is empty</h2>
+    </ng-template>
   </div>
 
   <div class="container shopping-cart-container d-flex flex-column align-items-center">
@@ -25,6 +28,9 @@
         <span>Size:
           <p>{{ item.size }}</p>
         </span>
+        <span>Heel:
+          <p>{{ item.heel.heelName }}</p>
+        </span>
         <span>Price:
           <p>{{ item.price }}</p>
         </span>
@@ -33,7 +39,8 @@
         </span>
       </div>
     </div>
-    <div class="d-flex col-lg-8 flex-grow-1 justify-content-end m-0 p-0">
+    <div class="d-flex col-lg-8 flex-grow-1 justify-content-end m-0 p-0"
+         *ngIf="shoppingItems && shoppingItems.length > 0">
       <button class="cart-delete-all" (click)="deleteLocalStorage()">Delete all</button>
     </div>
   </div>
