--- a/src/app/core/components/product-detail-text/product-detail-text.component.scss
+++ b/src/app/core/components/product-detail-text/product-detail-text.component.scss
@@ -7,7 +7,8 @@
     border: 1px solid transparent;
     padding: 5px;
 
-    &:hover, &-selected {
+    &:hover,
+    &-selected {
       border: 1px solid black;
     }
 
@@ -23,12 +24,14 @@
 }
 
 .shoe-numbers {
+  height: 30px;
+
   button.size-number {
     margin-right: 10px;
     padding: 4px 8px;
     width: 60px;
     border: 1px solid #000000;
-    height: 26px;
+    height: 30px;
     font-size: 12px;
     line-height: 12px;
     background: transparent;
@@ -38,7 +41,7 @@
       background: lightgray;
     }
 
-    &-disabled{
+    &-disabled {
       opacity: 0.7;
       cursor: not-allowed;
     }
@@ -46,12 +49,14 @@
 }
 
 .shoe-heels {
+  height: 30px;
+
   button.heel-number {
     margin-right: 10px;
     padding: 4px 8px;
     width: 60px;
     border: 1px solid #000000;
-    height: 26px;
+    height: 30px;
     font-size: 12px;
     line-height: 12px;
     background: transparent;
@@ -61,7 +66,7 @@
       background: lightgray;
     }
 
-    &-disabled{
+    &-disabled {
       opacity: 0.7;
       cursor: not-allowed;
     }
@@ -78,6 +83,7 @@
   margin: 0 auto;
   padding: 14px 130px;
   outline: none;
+
   &[disabled] {
     cursor: not-allowed;
     opacity: 0.7;
