--- a/src/app/modules/cart/pages/cart.component.html
+++ b/src/app/modules/cart/pages/cart.component.html
@@ -1,4 +1,5 @@
-<div class="container-fluid">
+<div class="container-fluid"
+[class.empty-cart]="shoppingItems?.length < 1">
   <div class="container text-center">
     <h2 *ngIf="shoppingItems && shoppingItems.length > 0 ;else prazna">Shopping cart</h2>
     <ng-template #prazna>
@@ -34,20 +35,23 @@
         <span>Price:
           <p>{{ item.price }}</p>
         </span>
-        <span>Description:
+       <!-- <span>Description:
           <p>{{ item.description }}</p>
-        </span>
+        </span>-->
       </div>
     </div>
-    <div class="d-flex col-lg-8 flex-grow-1 justify-content-end m-0 p-0"
+    <div class="d-flex col-lg-8 flex-grow-1 m-0 p-0 order-buttons"
          *ngIf="shoppingItems && shoppingItems.length > 0">
-      <button class="cart-delete-all" (click)="deleteLocalStorage()">Delete all</button>
+      <button class="cart-delete-all mr-3">Poruci</button>
+      <button class="cart-delete-all" (click)="deleteLocalStorage()">Obrisi sve</button>
     </div>
   </div>
 
 <!--  <div class="container d-flex justify-content-end">-->
 <!--    <button (click)="deleteLocalStorage()">Delete all</button>-->
 <!--  </div>-->
-
+  <app-order-form-component
+    *ngIf="shoppingItems && shoppingItems.length > 0">
+  </app-order-form-component>
 
 </div>
