--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -2,29 +2,29 @@
   <div class="col-12 d-flex flex-wrap footer-content">
     <div class="col-md-3 col-sm-6">
       <div class="newsletter">
-        <p>SUBSCRIBE TO OUR NEWSLETTER</p>
+        <p>PRETPLATI SE ZA EMAIL OBAVEŠTENJA</p>
         <div class="subscribe-inputs d-flex flex-wrap ">
-          <input type="email" placeholder="enter your email"/>
-          <button>SUBSCRIBE</button>
+          <input type="email" placeholder="Unesite Vaš email"/>
+          <button>PRETPLATI SE</button>
         </div>
       </div>
     </div>
     <div class="col-md-3 col-sm-6">
-      <p><b>CUSTOMER CARE</b></p>
-      <p>HELP</p>
+      <p><b>KORISNIČKA PODRŠKA</b></p>
+      <p>POMOĆ</p>
     </div>
     <div class="col-md-3 col-sm-6">
       <p><b>LA PISTA</b></p>
-      <p>ABOUT US</p>
-      <p>CONTACT</p>
-      <p>PRIVACY</p>
+      <p [routerLink]="'/about'">O NAMA</p>
+      <p [routerLink]="'/contact'">KONTAKT</p>
+      <p>PRIVATNOST</p>
       <p>COOKIE</p>
     </div>
     <div class="col-md-3 col-sm-6">
-      <p><b>SHOPPING ONLINE</b></p>
-      <p>PAYMENTS METHOD</p>
-      <p>SHIPPING METHOD</p>
-      <p>RETURN POLICY</p>
+<!--      <p><b>SHOPPING ONLINE</b></p>-->
+<!--      <p>PAYMENTS METHOD</p>-->
+<!--      <p>SHIPPING METHOD</p>-->
+<!--      <p>RETURN POLICY</p>-->
     </div>
   </div>
 </div>
