--- a/src/app/modules/about/pages/about.component.html
+++ b/src/app/modules/about/pages/about.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="container my-5">
-    <h3 class="mb-2">OUR STORY</h3>
-    <p class="mb-3"><b>Where passion can lead you?</b></p>
+    <h3 class="mb-2">NAŠA PRIČA</h3>
+    <p class="mb-3"><b>Gde vas strast može dovesti?</b></p>
 
     <p style="font-size: 14px; line-height: 20px;font-weight: 300">
       Everyone asked to himself this question at least once in life, the answer
