--- a/src/app/modules/contact/pages/contact.component.html
+++ b/src/app/modules/contact/pages/contact.component.html
@@ -3,7 +3,7 @@
     <div class="col-lg-12 d-flex flex-wrap">
       <div class="col-lg-4 col-md-6 d-flex justify-content-center">
        <div class="d-flex flex-column">
-         <p><b>PHONE</b></p>
+         <p><b>Telefon</b></p>
          <a href="tel:+39 0883 198 5747">+39 0883 198 5747</a>
        </div>
       </div>
@@ -15,8 +15,8 @@
       </div>
       <div class="col-lg-4 col-md-12 d-flex justify-content-center">
         <div class="d-flex flex-column">
-          <p><b>WRITE US</b></p>
-          <p style="font-size: 12px">We aim to respond within 24 hours, however, during busy periods like holidays, sales and special campaigns we may take a little longer getting back to you.</p>
+          <p><b>PIŠITE NAM</b></p>
+          <p style="font-size: 12px">Cilj nam je da odgovorimo u roku od 24 sata, međutim, tokom zauzetih perioda poput praznika, rasprodaja i posebnih kampanja, možda će potrajati malo duže.</p>
         </div>
       </div>
     </div>
