--- a/src/app/core/components/home-four-images/home-four-images.component.html
+++ b/src/app/core/components/home-four-images/home-four-images.component.html
@@ -3,14 +3,15 @@
     <div class="col-12">
       <div class="d-flex flex-column align-items-center">
         <h3 class="text-center">
-          <b>JOIN THE NEWSLETTER AND CLAIM 15% DISCOUNT ON YOUR FIRST ORDER</b>
+          <b>PRIDRUŽITE SE I DOBIJATE 15% POPUSTA NA PRVU NARUDŽBINU</b>
         </h3>
-        <p>Keep yourself updated with the latest news and gain 15% discount</p>
+        <p>Budite u toku sa najnovijim vestima i ostvarite 15% popusta
+        </p>
         <div class="newsletter">
-          <p>SUBSCRIBE TO OUR NEWSLETTER</p>
+          <p>PRETPLATITE SE NA OBAVEŠTENjA</p>
           <div class="subscribe-inputs d-flex flex-wrap">
-            <input type="email" placeholder="enter your email" />
-            <button>SUBSCRIBE</button>
+            <input type="email" placeholder="Upišite vaš email" />
+            <button>PRETPLATITI SE</button>
           </div>
         </div>
       </div>
