--- a/src/app/core/components/product-detail-text/product-detail-text.component.scss
+++ b/src/app/core/components/product-detail-text/product-detail-text.component.scss
@@ -1,4 +1,6 @@
 .color-choice {
+  flex-wrap: wrap;
+
   .color-box-wrapper {
     margin-right: 10px;
     cursor: pointer;
@@ -17,14 +19,15 @@
     //}
 
     .color-box {
-      width: 100%;
-      height: 100%;
+      width: 28px;
+      height: 28px;
     }
   }
 }
 
 .shoe-numbers {
-  height: 30px;
+  min-height: 30px;
+  line-height: 40px;
 
   button.size-number {
     margin-right: 10px;
@@ -49,7 +52,8 @@
 }
 
 .shoe-heels {
-  height: 30px;
+  min-height: 30px;
+  line-height: 40px;
 
   button.heel-number {
     margin-right: 10px;
@@ -81,11 +85,32 @@
   color: white;
   font-weight: 400;
   margin: 0 auto;
-  padding: 14px 130px;
   outline: none;
 
   &[disabled] {
     cursor: not-allowed;
     opacity: 0.7;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .add-to-cart-button {
+    display: inline;
+    cursor: pointer;
+    border: 1px solid black;
+    background-color: #000;
+    color: white;
+    font-weight: 400;
+    margin: 0 auto;
+    padding: 14px 130px;
+    outline: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .add-to-cart-button {
+    padding: auto;
+    width: 100%;
+    height: 40px;
   }
 }
