--- a/src/app/modules/product-detail/pages/product-detail.component.html
+++ b/src/app/modules/product-detail/pages/product-detail.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid mt-5">
+<div class="container-fluid mt-5 d-flex justify-content-center align-items-center">
   <div class="container m-0 p-0">
     <div class="col-lg-12 d-flex flex-wrap" *ngIf="singleDataObject && detailImage">
       <div class="col-lg-6 d-flex align-items-center justify-content-center">
