--- a/src/app/modules/contact/pages/contact.component.html
+++ b/src/app/modules/contact/pages/contact.component.html
@@ -3,7 +3,7 @@
     <div class="col-lg-12 d-flex flex-wrap">
       <div class="col-lg-4 col-md-6 d-flex justify-content-center">
        <div class="d-flex flex-column">
-         <p><b>Telefon</b></p>
+         <p><b>TELEFON</b></p>
          <a href="tel:+39 0883 198 5747">+39 0883 198 5747</a>
        </div>
       </div>
