--- a/src/app/core/components/product-detail-text/product-detail-text.component.html
+++ b/src/app/core/components/product-detail-text/product-detail-text.component.html
@@ -63,6 +63,6 @@
           (click)="updateCart()"
           [disabled]="!selectedHeel"
   >
-    Add to cart
+    DODAJ U KORPU
   </button>
 </div>
