--- a/src/app/core/components/home-four-images/home-four-images.component.html
+++ b/src/app/core/components/home-four-images/home-four-images.component.html
@@ -1,22 +1,22 @@
 <div class="container-fluid my-5">
-  <div class="container">
+<!--  <div class="container">-->
     <div class="col-12">
-      <div class="d-flex flex-column align-items-center">
-        <h3 class="text-center">
+      <div class="d-flex flex-column align-items-center text-center">
+        <h3>
           <b>PRIDRUŽITE SE I DOBIJATE 15% POPUSTA NA PRVU NARUDŽBINU</b>
         </h3>
         <p>Budite u toku sa najnovijim vestima i ostvarite 15% popusta
         </p>
         <div class="newsletter">
           <p>PRETPLATITE SE NA OBAVEŠTENjA</p>
-          <div class="subscribe-inputs d-flex flex-wrap">
+          <div class="subscribe-inputs d-flex">
             <input type="email" placeholder="Upišite vaš email" />
-            <button>PRETPLATITI SE</button>
+            <button style="height: 40px">PRETPLATITI SE</button>
           </div>
         </div>
       </div>
     </div>
-  </div>
+<!--  </div>-->
 </div>
 <div class="container-fluid">
   <div class="row">
