--- a/src/app/modules/cart/pages/cart.component.html
+++ b/src/app/modules/cart/pages/cart.component.html
@@ -9,7 +9,7 @@
 
   <div class="container shopping-cart-container d-flex flex-column align-items-center">
     <div
-      class="col-8 d-flex shopping-cart-item"
+      class="col-lg-8 col-md-10 col-sm-12 d-flex shopping-cart-item"
       *ngFor="let item of shoppingItems"
     >
       <div class="col-lg-7 shopping-cart-item-image">
