[- cart style fixes] * litttle cart buttons & words styling

--- a/src/app/modules/cart/pages/cart.component.html
+++ b/src/app/modules/cart/pages/cart.component.html
@@ -42,8 +42,8 @@
     </div>
     <div class="d-flex col-lg-8 flex-grow-1 m-0 p-0 order-buttons"
          *ngIf="shoppingItems && shoppingItems.length > 0">
-      <button class="cart-delete-all mr-3">Poruci</button>
-      <button class="cart-delete-all" (click)="deleteLocalStorage()">Obrisi sve</button>
+      <button class="mr-3">Poruči</button>
+      <button class="cart-delete-all" (click)="deleteLocalStorage()">Obriši sve</button>
     </div>
   </div>
 
