--- a/src/app/core/components/order-form/order-form.component.html
+++ b/src/app/core/components/order-form/order-form.component.html
@@ -58,9 +58,12 @@
       </div>
     </form>
   </div>
-  <div class="container d-flex text-right justify-content-end">
-    <div class="col-3 d-flex">
-      <button class="btn btn-success w-100 cart-order-button"><b class="text-uppercase">Poruci</b></button>
-    </div>
+<!--  <div class="container d-flex text-right justify-content-end">-->
+<!--    <div class="d-flex" style="max-width: 222px;min-width: 123px;width: 100%">-->
+<!--      -->
+<!--    </div>-->
+<!--  </div>-->
+  <div class="d-flex">
+    <button class="btn btn-success w-100 cart-order-button"><b class="text-uppercase">Poruči</b></button>
   </div>
 </div>
