--- a/src/app/core/components/order-form/order-form.component.scss
+++ b/src/app/core/components/order-form/order-form.component.scss
@@ -7,13 +7,13 @@ button.cart-order-button{
   border: none;
   background-color: rgba(0,0,0,0.8);
   color: white;
-  width: 130px;
+  width: 200px!important;
   height: 40px;
   font-size: 14px;
   transition: 0.3s;
 
   &:hover {
-    width: 150px;
+    //width: 150px;
     transition: 0.3s;
     background-color: rgba(0,0,0,1);
   }
