--- a/src/app/core/components/order-form/order-form.component.html
+++ b/src/app/core/components/order-form/order-form.component.html
@@ -2,21 +2,25 @@
   class="container-fluid d-flex flex-column align-items-center justify-content-center mt-5"
 >
   <div class="container text-center">
-    <h2 class="my-4">Forma porudzbine</h2>
+    <h2 class="my-4">Popunite formu za porucivanje</h2>
   </div>
   <div class="container">
-    <form class="order-form">
+    <form class="order-form" [formGroup]="sendOrderForm">
       <div class="d-flex flex-wrap">
         <div class="col-lg-6 flex-grow-1">
           <mat-form-field appearance="outline" class="example-full-width">
             <mat-label>Ime</mat-label>
-            <input matInput placeholder="Ime"/>
+            <input formControlName="firstName"
+                   matInput
+                   placeholder="Ime" />
           </mat-form-field>
         </div>
         <div class="col-lg-6 flex-grow-1">
           <mat-form-field appearance="outline" class="example-full-width">
             <mat-label>Prezime</mat-label>
-            <input matInput placeholder="Prezime"/>
+            <input matInput
+                   formControlName="lastName"
+                   placeholder="Prezime" />
           </mat-form-field>
         </div>
       </div>
@@ -24,13 +28,13 @@
         <div class="col-lg-6 flex-grow-1">
           <mat-form-field appearance="outline" class="example-full-width">
             <mat-label>Email</mat-label>
-            <input matInput placeholder="Email"/>
+            <input formControlName="email" matInput placeholder="Email" />
           </mat-form-field>
         </div>
         <div class="col-lg-6 flex-grow-1">
           <mat-form-field appearance="outline" class="example-full-width">
             <mat-label>Telefon</mat-label>
-            <input matInput placeholder="Telefon"/>
+            <input mask="000-00-00-000" formControlName="phone" matInput placeholder="Telefon" />
           </mat-form-field>
         </div>
       </div>
@@ -39,31 +43,30 @@
           <div class="col-9 p-0 pr-3">
             <mat-form-field appearance="outline" class="example-full-width">
               <mat-label>Adresa</mat-label>
-              <input matInput placeholder="Adresa"/>
+              <input formControlName="address" matInput placeholder="Adresa" />
             </mat-form-field>
           </div>
           <div class="col-3 p-0">
             <mat-form-field appearance="outline" class="example-full-width">
               <mat-label>Broj</mat-label>
-              <input matInput placeholder="Broj"/>
+              <input formControlName="addressUnit" matInput placeholder="Broj" />
             </mat-form-field>
           </div>
         </div>
         <div class="col-lg-6 flex-grow-1">
           <mat-form-field appearance="outline" class="example-full-width">
             <mat-label>Napomena</mat-label>
-            <input matInput placeholder="Napomena"/>
+            <input formControlName="note" matInput placeholder="Napomena" />
           </mat-form-field>
         </div>
       </div>
     </form>
   </div>
-<!--  <div class="container d-flex text-right justify-content-end">-->
-<!--    <div class="d-flex" style="max-width: 222px;min-width: 123px;width: 100%">-->
-<!--      -->
-<!--    </div>-->
-<!--  </div>-->
   <div class="d-flex">
-    <button class="btn btn-success w-100 cart-order-button"><b class="text-uppercase">Poruči</b></button>
+    <button class="btn btn-success w-100 cart-order-button"
+            [disabled]="!sendOrderForm.valid"
+            (click)="sendFormData()">
+      <b class="text-uppercase">Poruči</b>
+    </button>
   </div>
 </div>
